--- a/package.json
+++ b/package.json
@@ -10,8 +10,31 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/slider": "^4.5.7",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.2.0",
+    "@react-native-firebase/firestore": "^22.2.0",
+    "@react-native-firebase/functions": "^22.2.0",
+    "@react-native-firebase/storage": "^22.2.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.3.3",
+    "axios": "^1.10.0",
+    "expo-linear-gradient": "^14.1.4",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-is": "^19.1.0",
+    "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
