--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.14.1"
   },
